--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,4 @@
-# Node modules
-node_modules/
 
-# Build output
-dist/
-build/
+node_modules
 
-# TypeScript
-*.tsbuildinfo
 
-# Logs
-*.log
-npm-debug.log*
-
-# Environment variables
-.env
-
-# OS-specific files
-.DS_Store
-Thumbs.db
